remove List#getFirst to make compatible with java 17